# attention-mps-torch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/: library.h  library.mm
src/attention_mps/: __init__.py
tests/: benchmark_performance.py  test_operator.py
