[build-system]
requires = ["scikit-build-core>=0.5", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "attention_mps_torch"
version = "0.2.0"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/jhurt/attention-mps-torch"
"Repository" = "https://github.com/jhurt/attention-mps-torch"
"Bug Tracker" = "https://github.com/jhurt/attention-mps-torch/issues"

[tool.scikit-build]
wheel.packages = ["src/attention_mps"]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.optional-dependencies]
test = [
    "pandas",
    "pytest",
    "tabulate",
]
